# mira

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/dependencies/camera_driver/: CMakeLists.txt  package.xml
src/dependencies/camera_driver/src/: camera_driver_node.cpp  camera_driver_recv.cpp  imu_to_tf_node.cpp  zed_open_capture_node.cpp
src/mira2_control_master/launch/: alt_master.launch
src/mira2_control_master/mira2_control_master/: alt_master.py  dock_controller.py  killswitch.py  thrustScaler.py
src/mira2_dashboard/: setup.py
src/mira2_path_planning/src/: docking_controller.cpp
src/mira2_path_planning/src/bucket/: phase2.py
src/mira2_path_planning/src/docking/: phase1.py
src/mira2_perception/: CMakeLists.txt  optical_flow.py  package.xml  setup.cfg
src/mira2_perception/docking_perception_p2/: improved.py
src/mira2_perception/launch/: camera_1.launch  camera_auto.launch  camera_imx335.launch
src/mira2_perception/src/: improved.py
src/mira2_perception/src/bucket/: phase2_perception.py  phase2_perception_rtsp.py
src/mira2_pid_control/src/: docking_p1.py
